# anigit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  lib.rs  main.rs  tree.rs
src/catalog/: mod.rs
src/commands/: add.rs  blame.rs  branch.rs  checkout.rs  clone_fork.rs  commit.rs  compare.rs  config.rs  diff.rs  init.rs  log.rs  merge.rs  mod.rs  reflog.rs  refresh.rs  remote.rs  revert.rs  show.rs  status.rs  tag.rs  uninstall.rs
src/repo/: commit.rs  config.rs  mod.rs  staging.rs
src/tui/: blame_search.rs  mod.rs  search.rs
